--- a/HungHaStore/bin/HungHaStore.dll.config
+++ b/HungHaStore/bin/HungHaStore.dll.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MyDB" connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MyDB" connectionString="Data Source=DESKTOP-AIS48AM\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
