--- a/HungHaStore/bin/HungHaStore.dll.config
+++ b/HungHaStore/bin/HungHaStore.dll.config
@@ -62,6 +62,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MyDB" connectionString="Data Source=DESKTOP-AIS48AM\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="MyDB" connectionString="data source=DESKTOP-AIS48AM\SQLEXPRESS;initial catalog=hung_ha_store;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
