--- a/HungHaStore/HungHaStore.csproj
+++ b/HungHaStore/HungHaStore.csproj
@@ -136,7 +136,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\ACategoryController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AInvoiceController.cs" />
     <Compile Include="Areas\Admin\Controllers\AUserController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AuthorController.cs" />
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
     <Compile Include="Areas\Admin\Controllers\AProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\AStoreController.cs" />
@@ -842,6 +844,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Views\Author\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -862,6 +865,8 @@
     <Content Include="Areas\Admin\Views\AUser\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AUser\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AUser\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\AInvoice\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\AInvoice\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="App_Data\js-dèault\jquery-3.4.1.slim.min.map" />
     <Content Include="App_Data\js-dèault\jquery-3.4.1.min.map" />
