--- a/HungHaStore/bin/HungHaStore.dll.config
+++ b/HungHaStore/bin/HungHaStore.dll.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <sessionState timeout="180"></sessionState>
+	 <sessionState timeout="180"></sessionState>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -65,5 +65,5 @@
   </entityFramework>
   <connectionStrings>
     <add name="Model1" connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Model2" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=HungHaStore.Models.Model2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model3" connectionString="data source=ADMIN\SQLEXPRESS;initial catalog=hung_ha_store;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
