--- a/HungHaStore/bin/HungHaStore.dll.config
+++ b/HungHaStore/bin/HungHaStore.dll.config
@@ -64,6 +64,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="Model2" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=HungHaStore.Models.Model2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model3" connectionString="data source=ADMIN\SQLEXPRESS;initial catalog=hung_ha_store;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="Model1" connectionString="Data Source=DESKTOP-AIS48AM\SQLEXPRESS;Initial Catalog=hung_ha_store;Integrated Security=True" providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
