--- a/HungHaStore/HungHaStore.csproj
+++ b/HungHaStore/HungHaStore.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\AjaxController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
@@ -846,11 +847,11 @@
     <Content Include="Views\Security\Register.cshtml" />
     <Content Include="Views\Ajax\Add.cshtml" />
     <Content Include="Views\Cart\Checkout.cshtml" />
-    <Content Include="Views\Home\ListInvoice.cshtml" />
     <Content Include="Views\Home\Profire.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Cart\OrderInfo.cshtml" />
     <Content Include="Views\Profile\ChangePass.cshtml" />
+    <Content Include="Views\Invoice\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
